# ai-zune-inflate

./: Cargo.toml  README.md
.github/workflows/: ci.yml  clippy.yml  fuzz.yml  no-std.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_buffer.rs  decode_zlib.rs  roundtrip.rs  roundtrip_zlib.rs
src/: decoder.rs  encoder.rs  errors.rs  lib.rs
src/encoder/: hc_matchfinder.rs
