[package]
name = "ai-zune-inflate"
version = "0.2.54"
rust-version = "1.58.1"
edition = "2021"
repository = "https://github.com/atom-planet-embrace/ai-zune-inflate"
description = "A no_std port of zune-inflate"
exclude = ["tests/"]
homepage = "https://github.com/atom-planet-embrace/ai-zune-inflate"
keywords = ["compression", "inflate", "deflate"]
categories = ["compression"]
license = "MIT OR Apache-2.0 OR Zlib"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
zlib = ["simd-adler32"]
gzip = []
std = ["simd-adler32/std"]

default = ["zlib", "gzip"]

[dependencies]
simd-adler32 = { version = "0.3.8", optional = true, default-features = false }
